objects/LCRM_Integration_defaults_Values__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>DPS-1952-All LCRM Team going to use the values.Created by Radhika Pawar</description>
    <fields>
        <fullName>LCRM_ApplicationId__c</fullName>
        <label>LCRM_ApplicationId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_CompanyId__c</fullName>
        <label>LCRM_CompanyId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_ExternalSystemName__c</fullName>
        <label>LCRM_ExternalSystemName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_WebserviceName__c</fullName>
        <label>LCRM_WebserviceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LCRM Integration defaults Values</label>
</CustomObject>